# amphisbaena

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  application.cpp
cfg/fix_client/: tradeclient.cfg
doc/: Doxyfile
example/: fix_server.hpp  json.hpp  simple.cpp
include/: application.hpp  builder.hpp  client.hpp  connection.hpp  context.hpp  coroutine.hpp  environment.hpp  event.hpp  exception.hpp  func.hpp  future.hpp  loader.hpp  log.hpp  message.hpp  object.hpp  parser.hpp  plugin.hpp  processor.hpp  protocol.hpp  schedule.hpp  server.hpp  service.hpp  session.hpp  translator.hpp
include/detail/: asio_schedule.hpp  fix_client.hpp  fix_message.hpp  fix_object.hpp  http_fix_processor.hpp  http_object.hpp  http_parser.hpp  http_protocol.hpp  json_message.hpp  json_object.hpp  uds_server.hpp
include/impl/: fix_client.hpp  fix_message.hpp  http_parser.hpp  json_message.hpp  uds_server.hpp
scripts/: fix_field_xslt.py
src/: CMakeLists.txt  application.cpp  builder.cpp  coroutine.cpp  environment.cpp  message.cpp  object.cpp  plugin.cpp  processor.cpp  schedule.cpp  server.cpp  util.hpp
src/builder/: CMakeLists.txt
src/builder/fix_client/: CMakeLists.txt  fix_builder.cpp  fix_builder.hpp  fix_client.cpp  fix_client.hpp
src/builder/http_to_fix/: CMakeLists.txt  builder.cpp  builder.hpp  http_to_fix_builder.cpp  http_to_fix_builder.hpp
src/common/: CMakeLists.txt
src/common/http_message/: CMakeLists.txt  http_message.cpp  http_message.hpp
src/common/http_monitor/: CMakeLists.txt  http_monitor.cpp  http_monitor.hpp
src/common/http_parser/: CMakeLists.txt  http_parser.cpp  http_parser.hpp
src/common/tcp_server/: CMakeLists.txt  tcp_connection.cpp  tcp_connection.hpp  tcp_server.cpp  tcp_server.hpp
src/common/uds_server/: CMakeLists.txt  uds_connection.cpp  uds_connection.hpp  uds_server.cpp  uds_server.hpp
src/detail/: asio_schedule.cpp  asio_schedule.hpp  fix_client.cpp  http_parser.cpp  http_protocol.cpp  http_server.cpp  http_server.hpp  schedule_impl.cpp  schedule_impl.hpp  ucontext_schedule.cpp  ucontext_schedule.hpp  uds_server.cpp  uds_server.hpp
src/impl/: fix_builder.cpp  fix_builder.hpp  fix_client.cpp  fix_client.hpp  fix_message.cpp  fix_message.hpp  http_parser.cpp  http_parser.hpp  http_server.cpp  http_server.hpp  json_message.cpp  json_message.hpp  uds_server.cpp  uds_server.hpp
src/impl/abandon/: ucontext_schedule.cpp  ucontext_schedule.hpp
src/plugin/: CMakeLists.txt
src/plugin/fix_client/: CMakeLists.txt  client.hpp  fix_builder.cpp  fix_builder.hpp  fix_client.cpp  fix_client.hpp  fix_field.hpp  fix_field.hpp.xsl  fix_message.cpp  fix_message.hpp  plugin.cpp
src/plugin/http_server/: CMakeLists.txt  http_builder.cpp  http_builder.hpp  http_message.cpp  http_message.hpp  http_server.cpp  http_server.hpp  json_message.hpp  plugin.cpp
src/plugin/http_to_fix/: CMakeLists.txt  http_to_fix_builder.cpp  http_to_fix_builder.hpp  plugin.cpp
test/: CMakeLists.txt  fixture_message.hpp  fixture_schedule.hpp  fixture_server.hpp  main.cpp  mock_connection.hpp  mock_server.hpp  mock_session.hpp  test_amphisbaena.cpp  test_application.cpp  test_builder.cpp  test_context.cpp  test_coroutine.cpp  test_fix_client.cpp  test_future.cpp  test_http_parser.cpp  test_http_protocol.cpp  test_message.cpp  test_message.ipp  test_object.cpp  test_parser.cpp  test_plugin.cpp  test_processor.cpp  test_schedule.cpp  test_server.cpp  test_uds_server.cpp  test_util.cpp
test/builder/: test_fix_builder.cpp  test_fix_client.cpp  test_http_to_fix_builder.cpp
test/cfg/: executor.cfg
test/common/: CMakeLists.txt
test/common/http_message/: CMakeLists.txt  test_http_message.cpp
test/common/http_monitor/: CMakeLists.txt  test_http_monitor.cpp
test/common/http_parser/: CMakeLists.txt  test_http_parser.cpp
test/common/tcp_server/: CMakeLists.txt  test_tcp_server.cpp
test/common/uds_server/: CMakeLists.txt  test_uds_server.cpp
test/fixture/: fixture_message.hpp  fixture_schedule.hpp
test/impl/: test_fix_builder.cpp  test_fix_client.cpp  test_fix_message.cpp  test_http_server.cpp  test_json_message.cpp  test_uds_server.cpp
test/matcher/: matcher_message.hpp
test/mock/: mock_builder.hpp  mock_client.hpp  mock_message.hpp  mock_object.hpp  mock_parser.hpp  mock_processor.hpp  mock_protocol.hpp  mock_server.hpp  mock_service.hpp  mock_session.hpp  mock_uds_server.hpp
test/mock/builder/: CMakeLists.txt  builder1.cpp  builder11.cpp  builder12.cpp  builder13.cpp
test/mock/plugin/: CMakeLists.txt  plugin1.cpp  plugin11.cpp  plugin12.cpp  plugin13.cpp
test/plugin/: test_fix_builder.cpp  test_fix_client.cpp  test_fix_message.cpp  test_http_server.cpp  test_http_to_fix_builder.cpp  test_json_message.cpp  test_uds_server.cpp
test/plugin/fix_client/: CMakeLists.txt  mock_client.hpp  test_fix_builder.cpp  test_fix_client.cpp  test_fix_message.cpp
test/plugin/http_server/: CMakeLists.txt  test_http_builder.cpp  test_http_message.cpp  test_http_server.cpp  test_uds_server.cpp
test/plugin/http_to_fix/: CMakeLists.txt  test_http_to_fix_builder.cpp
test/tool/: CMakeLists.txt  fix_server.cpp  fix_server.hpp  http_client.cpp  http_client.hpp  util.hpp
